// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "euphrat.es.httpcache";
option java_outer_classname = "HttpCacheStateProto";

package state;

import "google/protobuf/empty.proto";

// The greeting service definition.
service CacheStateService {
  // Sends a greeting
  rpc SetCacheState (CacheState) returns (CacheStateResponse) {}
  rpc GetCacheState (google.protobuf.Empty) returns (CacheState) {}
}

// CacheState consists of a mode and resource name.
message CacheState {
  string resource = 1;
  uint32 mode = 2;
}

// The response message containing the greetings
message CacheStateResponse {
  bool success = 1;
}
